Addressing some Sonar warnings